--- a/index.html
+++ b/index.html
@@ -12,8 +12,29 @@
 <body>
    <div class="jumbotron jumbotron-fluid">
       <div class="container">
-         <h1 class="display-4">Fluid jumbotron</h1>
-         <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+         <div class="row">
+            <!-- foto Profil -->
+            <div class="col-md-3">
+               <img src="img/img01.JPG" alt="" class="rounded-circle">
+            </div>
+
+            <!-- Name tag -->
+            <div class="col-md-9">
+               <div class="display-4 float-right mt-4">
+                  <div class="row">
+                     <div class="col-sm-12 mr-5">Irwan <span>Ardiansyah</span></div>
+                  </div>
+               </div>
+               <div class="clear"></div>
+               <div class="lead float-right">
+                  <div class="row">
+                     <div class="col-sm-12 mr-5">
+                        Website Programmer
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
    </div>
 </body>
