--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <!-- foto Profil -->
             <div class="col-md-3">
                <img src="img/img01.JPG" alt="" class="rounded-circle">
+               <h5 class="mt-3 text-light">Email</h5>
+               <h5 class="text-light">Github</h5>
             </div>
 
             <!-- Name tag -->
