--- a/index.html
+++ b/index.html
@@ -5,36 +5,49 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Portfolio</title>
+   <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+
+   <!-- My fonts -->
+   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Turret+Road:700,800&display=swap" rel="stylesheet" <!-- CSS -->
    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent;">
+      <div class="container">
+         <a class="navbar-brand" href="#">Navbar</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </nav>
+
+   <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid">
       <div class="container">
          <div class="row">
-            <!-- foto Profil -->
-            <div class="col-md-3">
-               <img src="img/img01.JPG" alt="" class="rounded-circle">
-               <h5 class="mt-3 text-light">Email</h5>
-               <h5 class="text-light">Github</h5>
-            </div>
-
-            <!-- Name tag -->
-            <div class="col-md-9">
-               <div class="display-4 float-right mt-4">
-                  <div class="row">
-                     <div class="col-sm-12 mr-5">Irwan <span>Ardiansyah</span></div>
-                  </div>
-               </div>
-               <div class="clear"></div>
-               <div class="lead float-right">
-                  <div class="row">
-                     <div class="col-sm-12 mr-5">
-                        Website Programmer
-                     </div>
-                  </div>
-               </div>
+            <div class="col-md-12">
+               <!-- foto Profil -->
+               <img src="img/img01.JPG" alt="" class="rounded-circle mt-5">
             </div>
          </div>
       </div>
