--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
    <!-- My fonts -->
    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Turret+Road:700,800&display=swap" rel="stylesheet" <!-- CSS -->
+   <link href="https://fonts.googleapis.com/css?family=Turret+Road:700,800&display=swap" rel="stylesheet">
+
+   <!-- CSS -->
    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent;">
+   <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
          <a class="navbar-brand" href="#">Navbar</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -43,14 +45,7 @@
 
    <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-12">
-               <!-- foto Profil -->
-               <img src="img/img01.JPG" alt="" class="rounded-circle mt-5">
-            </div>
-         </div>
-      </div>
+
    </div>
 </body>
 
