--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-         <a class="navbar-brand" href="#">Navbar</a>
+         <a class="navbar-brand" href="#">Isite</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,13 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Profil</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="#">Portfolio</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link" href="#">Contact</a>
                </li>
             </ul>
          </div>
