--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
    <div class="jumbotron jumbotron-fluid">
 
    </div>
+
+
+   <script src="css/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+   <script src="js/jquery.min.js"></script>
 </body>
 
 </html>
