--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
 
    <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid">
-
+      <div class="container text-center">
+         <div class="display-4 text-light">
+            <span>Belajar</span> dari hal <span>kecil</span><br />
+            untuk kemudian menjadi <span>Besar</span></div>
+         <div class="lead text-light">get minimize info just click the button</div>
+         <div class="btn btn-danger merah mt-3">Get info</div>
+      </div>
    </div>
 
 
