--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="css/bootstrap-4.4.1-dist/css/bootstrap.min.css">
 
+   <!-- Font awesome -->
+   <link rel="stylesheet" href="css/all.min.css">
+
    <!-- My fonts -->
    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Turret+Road:700,800&display=swap" rel="stylesheet">
@@ -45,12 +48,22 @@
 
    <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid">
-      <div class="container text-center">
-         <div class="display-4 text-light">
-            <span>Belajar</span> dari hal <span>kecil</span><br />
-            untuk kemudian menjadi <span>Besar</span></div>
-         <div class="lead text-light">get minimize info just click the button</div>
-         <div class="btn btn-danger merah mt-3">Get info</div>
+      <div class="container">
+         <div class="row">
+            <div class="col-4 propil">
+               <img src="img/img01.JPG" alt="" class="rounded-circle">
+               <h5 class="mt-3">Irwan Ardiansyah</h5>
+               <i class="fab fa-github"></i>
+            </div>
+
+            <div class="col-8 text-center">
+               <div class="display-4 text-light">
+                  <span>Belajar</span> dari hal <span>kecil</span><br />
+                  untuk kemudian menjadi <span>Besar</span></div>
+               <div class="lead text-light">get minimize info just click the button</div>
+               <div class="btn btn-danger merah mt-3">Get info</div>
+            </div>
+         </div>
       </div>
    </div>
 
