--- a/index.html
+++ b/index.html
@@ -70,13 +70,19 @@
 
    <div class="container">
       <div class="row">
-         <div class="col-12"></div>
+         <div class="col-md-10 offset-md-1 menu">
+            <div class="row">
+               <div class="col-md-4">gambar 1</div>
+               <div class="col-md-4">gambar 2</div>
+               <div class="col-md-4">gambar 3</div>
+            </div>
+         </div>
       </div>
    </div>
 
 
-   <script src="css/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
    <script src="js/jquery.min.js"></script>
+   <script src="css/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
