--- a/index.html
+++ b/index.html
@@ -50,19 +50,23 @@
    <div class="jumbotron jumbotron-fluid">
       <div class="container">
          <div class="row">
-            <div class="col-4 propil">
-               <img src="img/img01.JPG" alt="" class="rounded-circle">
-               <h5 class="mt-3">Irwan Ardiansyah</h5>
-               <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
-               <a href="mailto:"><i class="fas fa-fw fa-envelope"></i>ardiansyahirwan923@gmail.com</a>
-            </div>
+            <div class="col-md-12 propil">
+               <div class="row">
+                  <div class="col-md-8">
+                     <div class="display-4 text-light">
+                        <span>Belajar</span> dari hal <span>kecil</span><br />
+                        untuk kemudian menjadi <span>Besar</span></div>
+                     <div class="lead text-light">get minimize info just click the button</div>
+                     <div class="btn btn-danger merah mt-3">Get info</div>
+                  </div>
 
-            <div class="col-8 text-center">
-               <div class="display-4 text-light">
-                  <span>Belajar</span> dari hal <span>kecil</span><br />
-                  untuk kemudian menjadi <span>Besar</span></div>
-               <div class="lead text-light">get minimize info just click the button</div>
-               <div class="btn btn-danger merah mt-3">Get info</div>
+                  <div class="col-md-4">
+                     <img src="img/img01.JPG" alt="" class="rounded-circle">
+                     <h5 class="mt-3">Irwan Ardiansyah</h5>
+                     <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
+                     <a href="mailto:"><i class="fas fa-fw fa-envelope"></i>ardiansyahirwan923@gmail.com</a>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
@@ -72,9 +76,9 @@
       <div class="row">
          <div class="col-md-10 offset-md-1 menu">
             <div class="row">
-               <div class="col-md-4">gambar 1</div>
-               <div class="col-md-4">gambar 2</div>
-               <div class="col-md-4">gambar 3</div>
+               <div class="col-4">gambar 1</div>
+               <div class="col-4">gambar 2</div>
+               <div class="col-4">gambar 3</div>
             </div>
          </div>
       </div>
