--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
    <div class="jumbotron jumbotron-fluid">
       <div class="container">
          <div class="row">
-            <div class="col-md-12 propil">
+            <div class="col-md-12">
                <div class="row">
-                  <div class="col-md-8">
+                  <div class="col-md-7 text-center">
                      <div class="display-4 text-light">
                         <span>Belajar</span> dari hal <span>kecil</span><br />
                         untuk kemudian menjadi <span>Besar</span></div>
@@ -60,11 +60,12 @@
                      <div class="btn btn-danger merah mt-3">Get info</div>
                   </div>
 
-                  <div class="col-md-4">
-                     <img src="img/img01.JPG" alt="" class="rounded-circle">
-                     <h5 class="mt-3">Irwan Ardiansyah</h5>
-                     <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
-                     <a href="mailto:"><i class="fas fa-fw fa-envelope"></i>ardiansyahirwan923@gmail.com</a>
+                  <div class="offset-md-2 col-md-3">
+                     <div class="propil">
+                        <img src="img/img01.JPG" alt="" class="rounded-circle">
+                        <h5 class="mt-3">Irwan Ardiansyah</h5>
+                        <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
+                     </div>
                   </div>
                </div>
             </div>
