Menghapus link email pada file index

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <div class="col-4 propil">
                <img src="img/img01.JPG" alt="" class="rounded-circle">
                <h5 class="mt-3">Irwan Ardiansyah</h5>
-               <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
-               <a href="mailto:"><i class="fas fa-fw fa-envelope"></i>ardiansyahirwan923@gmail.com</a>
+               <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a>
             </div>
 
             <div class="col-8 text-center">
