--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                <img src="img/img01.JPG" alt="" class="rounded-circle">
                <h5 class="mt-3">Irwan Ardiansyah</h5>
                <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a>
+<!--      sudah  dihapus           -->
             </div>
 
             <div class="col-8 text-center">
