--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark">
+   <nav class="navbar navbar-expand-lg navbar-dark pb-1">
       <div class="container">
          <a class="navbar-brand" href="#">Isite</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -31,9 +31,6 @@
             <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link" href="#">Profil</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#">Portfolio</a>
@@ -48,38 +45,13 @@
 
    <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-         <div class="row">
-            <div class="col-4 propil">
-               <img src="img/img01.JPG" alt="" class="rounded-circle">
-               <h5 class="mt-3">Irwan Ardiansyah</h5>
-               <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a>
-            </div>
-
-            <div class="offset-md-2 col-md-3">
-               <div class="propil">
-                  <img src="img/img01.JPG" alt="" class="rounded-circle">
-                  <h5 class="mt-3">Irwan Ardiansyah</h5>
-                  <a href=""><i class="fab fa-fw fa-github"></i>github.com/ardiansyahirwan</a><br />
-               </div>
-            </div>
-         </div>
+      <div class="display-4 text-center">
+         Welcome to</br>
+         <span id="m">Irwan</span> Ardiansyah <span id="p">Portfolio</span>
       </div>
    </div>
-   </div>
-   </div>
 
-   <div class="container">
-      <div class="row">
-         <div class="col-md-10 offset-md-1 menu">
-            <div class="row">
-               <div class="col-4">gambar 1</div>
-               <div class="col-4">gambar 2</div>
-               <div class="col-4">gambar 3</div>
-            </div>
-         </div>
-      </div>
-   </div>
+   <div class="layer"></div>
 
 
    <script src="js/jquery.min.js"></script>
