--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
-               <li class="nav-item">
+               <li class="nav-item active">
                   <a class="nav-link" href="#">Portfolio</a>
                </li>
-               <li class="nav-item">
+               <li class="nav-item active">
                   <a class="nav-link" href="#">Contact</a>
                </li>
             </ul>
@@ -44,11 +44,15 @@
    </nav>
 
    <!-- jumbotron -->
-   <div class="jumbotron jumbotron-fluid">
+   <div class="jumbotron jumbotron-fluid text-center">
       <div class="display-4 text-center">
          Welcome to</br>
          <span id="m">Irwan</span> Ardiansyah <span id="p">Portfolio</span>
       </div>
+
+      <div class="btn btn-transparan mt-5">Get Details</div>
+      <div class="btn btn-transparan mt-5">Download CV</div>
+
    </div>
 
    <div class="layer"></div>
