Menambahkan link ke github

--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 
    <!-- jumbotron -->
    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="display-4 text-center">
+      <div class="display-4">
          Welcome to</br>
          <span id="m">Irwan</span> Ardiansyah <span id="p">Portfolio</span>
       </div>
-
-      <div class="btn btn-transparan mt-5">Get Details</div>
+      <div class=" btn btn-transparan mt-5">Get Details</div>
       <div class="btn btn-transparan mt-5">Download CV</div>
-
+      <p class="text mt-5">Or Visit at</br>
+         <a href=""><i class="fab fa-github"></i> github.com/ardiansyahirwan</a>
+      </p>
    </div>
 
    <div class="layer"></div>
