Menambahkan container fluid

--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
       <div class=" btn btn-transparan mt-5">Get Details</div>
       <div class="btn btn-transparan mt-5">Download CV</div>
       <p class="text mt-5">Or Visit at</br>
-         <a href=""><i class="fab fa-github"></i> github.com/ardiansyahirwan</a>
+         <a class="text github" href=""><i class="fab fa-github"></i> github.com/ardiansyahirwan</a>
       </p>
    </div>
-
    <div class="layer"></div>
+
+   <!-- Main Content -->
+   <div class="container-fluid">
+
+   </div>
 
 
    <script src="js/jquery.min.js"></script>
