--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
    <link rel="stylesheet" href="css/fontawesome-free-5.12.1-web/css/all.min.css">
 
    <!-- My fonts -->
-   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,400&display=swap" rel="stylesheet">
+   <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap"
+      rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Turret+Road:700,800&display=swap" rel="stylesheet">
 
    <!-- CSS -->
