Menambahkan gambar profil dan teks biodata

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-               <li class="nav-item active">
+               <li class="nav-item">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
-               <li class="nav-item active">
+               <li class="nav-item">
                   <a class="nav-link" href="#">Portfolio</a>
                </li>
-               <li class="nav-item active">
+               <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
                </li>
             </ul>
@@ -60,8 +60,43 @@
    <div class="layer"></div>
 
    <!-- Main Content -->
-   <div class="container-fluid mb-5">
+   <div class="container-fluid">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12 text-center">
+               <img class="rounded-circle" src="img/img01.JPG" alt="">
+               <h3 class="nama pt-3">Irwan Ardiansyah</h3>
+               <h2 class="job">Web Programmer | Student</h2>
+            </div>
+         </div>
 
+         <div class="row pt-5">
+            <div class="offset-md-1"></div>
+            <div class="col-md-4">
+               <h1 class="hello">Hello World !</h1>
+               <p class="justify-content-center biodata"> I'm Irwan Ardiansyah, now i'm a student at BSI University.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellendus laboriosam et, velit
+                  corporis iusto odit nemo dolorem dolores sapiente voluptates fugiat nam incidunt quam amet
+                  reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure
+                  a quos odio porro quidem nulla nisi deleniti beatae, perferendis debitis aut tempore ipsa laudantium
+                  perspiciatis labore eveniet voluptatem rerum.</p>
+            </div>
+            <div class="col-md-2">
+               <hr>
+            </div>
+            <div class="col-md-4">
+               <p class="justify-content-center biodata">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eos, vero et voluptas nemo beatae
+                  sequi
+                  praesentium. Consectetur, repellendus nulla? Voluptate esse velit eveniet iusto laudantium architecto
+                  voluptatibus pariatur vero!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reiciendis
+                  illum placeat quos et fugit nobis voluptatum. Fugit, vitae officiis. Sequi magni blanditiis eaque
+                  autem ratione ex ab odit quaerat.
+               </p>
+            </div>
+            <div class="offset-md-1"></div>
+         </div>
+      </div>
    </div>
 
 
