--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="offset-md-1"></div>
             <div class="col-md-4">
                <h1 class="hello">Hello World !</h1>
-               <p class="justify-content-center biodata"> I'm Irwan Ardiansyah, now i'm a student at BSI University.
+               <p class="biodata"> I'm Irwan Ardiansyah, now i'm a student at BSI University.
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellendus laboriosam et, velit
                   corporis iusto odit nemo dolorem dolores sapiente voluptates fugiat nam incidunt quam amet
                   reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure
@@ -85,7 +85,7 @@
                <hr>
             </div>
             <div class="col-md-4">
-               <p class="justify-content-center biodata">
+               <p class="biodata">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eos, vero et voluptas nemo beatae
                   sequi
                   praesentium. Consectetur, repellendus nulla? Voluptate esse velit eveniet iusto laudantium architecto
