Mengedit profil dan menghapus beberapa gambar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-12 text-center">
-               <img class="rounded-circle" src="img/img01.JPG" alt="">
+               <img class="rounded-circle" src="img/profil.png" alt="">
                <h3 class="nama pt-3">Irwan Ardiansyah</h3>
                <h2 class="job">Web Programmer | Student</h2>
             </div>
@@ -77,11 +77,10 @@
                <p class="biodata"> I'm Irwan Ardiansyah, now i'm a student at BSI University.
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellendus laboriosam et, velit
                   corporis iusto odit nemo dolorem dolores sapiente voluptates fugiat nam incidunt quam amet
-                  reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure
-                  a quos odio porro quidem nulla nisi deleniti beatae, perferendis debitis aut tempore ipsa laudantium
-                  perspiciatis labore eveniet voluptatem rerum.</p>
+                  reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure.
+               </p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 my-auto">
                <hr>
             </div>
             <div class="col-md-4">
