--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
    <!-- Main Content -->
    <div class="container-fluid">
-      <div class="container">
+      <div class="container" id="profil">
          <div class="row">
             <div class="col-md-12 text-center">
                <img class="rounded-circle" src="img/profil.png" alt="">
@@ -94,6 +94,37 @@
                </p>
             </div>
             <div class="offset-md-1"></div>
+         </div>
+      </div>
+
+      <!-- kotak -->
+
+      <div class="container" id="kotak">
+         <div class="row">
+            <div class="col-md-4 mt-5">
+               <div class="kotak text-center">
+                  <img src="img/data.png" alt="gambar" class="mt-5">
+                  <h3 class="pt-4">make a perfect code</h3>
+                  <p>Build the perfect code with any Programming Language</p>
+                  <div class="btn biru">Get Details on Github</div>
+               </div>
+            </div>
+            <div class="col-md-4 mt-5">
+               <div class="kotak text-center">
+                  <img src="img/data.png" alt="gambar" class="mt-5">
+                  <h3 class="pt-4">make a perfect code</h3>
+                  <p>Build the perfect code with any Programming Language</p>
+                  <div class="btn biru">Get Details on Github</div>
+               </div>
+            </div>
+            <div class="col-md-4 mt-5">
+               <div class="kotak text-center">
+                  <img src="img/data.png" alt="gambar" class="mt-5">
+                  <h3 class="pt-4">make a perfect code</h3>
+                  <p>Build the perfect code with any Programming Language</p>
+                  <div class="btn biru">Get Details on Github</div>
+               </div>
+            </div>
          </div>
       </div>
    </div>
