mengubah background profil dan kotak

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="#kotak">Portfolio</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
@@ -53,15 +53,20 @@
       </div>
       <div class=" btn btn-transparan mt-5">Get Details</div>
       <div class="btn btn-transparan mt-5">Download CV</div>
-      <p class="text mt-5">Or Visit at</br>
-         <a class="text github" href=""><i class="fab fa-github"></i> github.com/ardiansyahirwan</a>
-      </p>
+      <div class="row">
+         <div class="col-md-12">
+            <p class="text mt-5">Or Visit at</br>
+               <a class="text github" href=""><i class="fab fa-github"></i> github.com/ardiansyahirwan</a>
+            </p>
+         </div>
+      </div>
    </div>
    <div class="layer"></div>
 
    <!-- Main Content -->
-   <div class="container-fluid">
-      <div class="container" id="profil">
+   <div id="profil">
+      <div class="container mb-5">
+
          <div class="row">
             <div class="col-md-12 text-center">
                <img class="rounded-circle" src="img/profil.png" alt="">
@@ -69,7 +74,6 @@
                <h2 class="job">Web Programmer | Student</h2>
             </div>
          </div>
-
          <div class="row pt-5">
             <div class="offset-md-1"></div>
             <div class="col-md-4">
@@ -77,7 +81,8 @@
                <p class="biodata"> I'm Irwan Ardiansyah, now i'm a student at BSI University.
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellendus laboriosam et, velit
                   corporis iusto odit nemo dolorem dolores sapiente voluptates fugiat nam incidunt quam amet
-                  reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure.
+                  reprehenderit, quae, qui illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                  iure.
                </p>
             </div>
             <div class="col-md-2 my-auto">
@@ -87,8 +92,10 @@
                <p class="biodata">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore eos, vero et voluptas nemo beatae
                   sequi
-                  praesentium. Consectetur, repellendus nulla? Voluptate esse velit eveniet iusto laudantium architecto
-                  voluptatibus pariatur vero!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reiciendis
+                  praesentium. Consectetur, repellendus nulla? Voluptate esse velit eveniet iusto laudantium
+                  architecto
+                  voluptatibus pariatur vero!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                  reiciendis
                   illum placeat quos et fugit nobis voluptatum. Fugit, vitae officiis. Sequi magni blanditiis eaque
                   autem ratione ex ab odit quaerat.
                </p>
@@ -96,10 +103,18 @@
             <div class="offset-md-1"></div>
          </div>
       </div>
+   </div>
 
-      <!-- kotak -->
+   <!-- kotak -->
 
-      <div class="container" id="kotak">
+   <div id="kotak">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12 pb-4">
+               <h1>Look for any vibes</h1>
+               <h5>Because life is just not one vibe</h5>
+            </div>
+         </div>
          <div class="row">
             <div class="col-md-4 mt-5">
                <div class="kotak text-center">
