--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                </li>
                <li class="nav-item">
+                  <a class="nav-link" href="#profil">Profile</a>
+               </li>
+               <li class="nav-item">
                   <a class="nav-link" href="#kotak">Portfolio</a>
                </li>
                <li class="nav-item">
@@ -139,6 +142,16 @@
                   <p>Build the perfect code with any Programming Language</p>
                   <div class="btn biru">Get Details on Github</div>
                </div>
+            </div>
+         </div>
+      </div>
+   </div>
+
+   <div class="kontak">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               aa
             </div>
          </div>
       </div>
