add fontawesome cdn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>My Portfolio</title>
+   <!-- Main CSS -->
    <link rel="stylesheet" href="public/css/main.css">
+
+   <!-- FontAwesome -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="bg-slate-900">
    <header class="block h-screen" data-id=""><h1 class="text-gray-300 font-bold text-2xl">Coba</h1></header>
@@ -33,7 +37,5 @@
          <i class="text-gray-300 fas fa-envelope"></i>
       </div>
    </div>
-
-   <script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 </body>
 </html>
