--- a/index.html
+++ b/index.html
@@ -12,30 +12,29 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body class="bg-slate-900">
-   <header class="block h-screen" data-id=""><h1 class="text-gray-300 font-bold text-2xl">Coba</h1></header>
+   <header class="section block h-screen translate-y-0 scale-100" id="home">
+   </header>
    <main>
-      <section class="h-screen hidden" data-id=""></section>
-      <section class="h-screen hidden" data-id=""></section>
-      <section class="h-screen hidden" data-id=""></section>
-      <section class="h-screen hidden" data-id=""></section>
+      <section class="section h-screen hidden translate-y-0 scale-100" id="about"></section>
+      <section class="section h-screen hidden translate-y-0 scale-100" id="portfolio"></section>
+      <section class="section h-screen hidden translate-y-0 scale-100" id="contact"></section>
    </main>
 
-   <div class="fixed z-10 right-[3%] top-[23%] flex flex-col gap-4" id="control">
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl flex justify-center items-center hover:bg-green-600" id="">
+   <div class="fixed z-10 right-[3%] top-[50%] flex flex-col gap-4 -translate-y-1/2" id="control">
+      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600 active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl flex justify-center items-center hover:bg-green-600" id="">
+      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600" data-id="about">
          <i class="text-gray-300 fas fa-user"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl flex justify-center items-center hover:bg-green-600" id="">
+      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600" data-id="portfolio">
          <i class="text-gray-300 fas fa-briefcase"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl flex justify-center items-center hover:bg-green-600" id="">
-         <i class="text-gray-300 fas fa-newspaper"></i>
-      </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl flex justify-center items-center hover:bg-green-600" id="">
+      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600" data-id="contact">
          <i class="text-gray-300 fas fa-envelope"></i>
       </div>
    </div>
+
+   <script src="public/js/main.js"></script>
 </body>
 </html>
