index.html : change background color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- FontAwesome -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body class="bg-slate-900">
+<body class="bg-gradient-to-t md:bg-gradient-to-l from-neon-blue via-purple-500 to-neon-pink">
    <header class="section h-screen translate-y-0 scale-100 active" id="home">
       <h1 class="text-gray-100 font-bold">1</h1>
    </header>
@@ -29,16 +29,16 @@
 
 <!-- Navigation Controls -->
    <div class="fixed z-10 right-[3%] top-[50%] flex flex-col gap-4 -translate-y-1/2" id="control">
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600 cursor-pointer active-btn" data-id="home">
+      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600 cursor-pointer" data-id="about">
+      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="about">
          <i class="text-gray-300 fas fa-user"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600 cursor-pointer" data-id="portfolio">
+      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="portfolio">
          <i class="text-gray-300 fas fa-briefcase"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-gray-700 shadow-2xl shadow-gray-700/30 flex justify-center items-center hover:bg-green-600 cursor-pointer" data-id="contact">
+      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="contact">
          <i class="text-gray-300 fas fa-envelope"></i>
       </div>
    </div>
