index.html: change into neumorphism style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
    <!-- FontAwesome -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body class="bg-gradient-to-t md:bg-gradient-to-l from-neon-blue via-purple-500 to-neon-pink">
-   <header class="section h-screen translate-y-0 scale-100 active" id="home">
-      <h1 class="text-gray-100 font-bold">1</h1>
+<body class="bg-slate-900 text-gray-300 relative">
+   <header class="section translate-y-0 scale-100 active px-[5%] md:px-[8%]" id="home">
+      <div class="h-screen grid md:grid-cols-2 gap-4">
+         <div class="flex justify-center items-center">
+            1
+         </div>
+         <div class="flex flex-col justify-center gap-5 px-4 order-first md:order-last">
+            <h1 class="font-bold text-3xl md:text-[43px] leading-[1.2]">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
+            <p class="text-lg text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
+            <div class="flex justify-start pt-4 gap-6">
+               <button class="neuro-effect px-5 py-4 rounded-md text-slate-300 font-medium active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
+               <button class="neuro-effect px-12 py-4 rounded-md text-slate-300 font-medium active:active-btn">Hire me</button>
+            </div>
+         </div>
+      </div>
    </header>
    <main>
       <section class="section h-screen translate-y-0 scale-100" id="about">
@@ -28,17 +40,17 @@
    </main>
 
 <!-- Navigation Controls -->
-   <div class="fixed z-10 right-[3%] top-[50%] flex flex-col gap-4 -translate-y-1/2" id="control">
-      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer active-btn" data-id="home">
+   <div class="fixed right-3 top-[50%] flex flex-col gap-4" id="control">
+      <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="about">
+      <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer" data-id="about">
          <i class="text-gray-300 fas fa-user"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="portfolio">
+      <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer" data-id="portfolio">
          <i class="text-gray-300 fas fa-briefcase"></i>
       </div>
-      <div class="rounded-full w-12 h-12 bg-neon-blue shadow-2xl shadow-neon-pink/95 flex justify-center items-center cursor-pointer" data-id="contact">
+      <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer" data-id="contact">
          <i class="text-gray-300 fas fa-envelope"></i>
       </div>
    </div>
