--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
    <!-- FontAwesome -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body class="bg-slate-900 text-gray-300 relative">
+<body class="bg-slate-900 text-gray-300 font-sans">
    <header class="section translate-y-0 scale-100 active px-[5%] md:px-[8%]" id="home">
       <div class="h-screen grid md:grid-cols-2 gap-4">
          <div class="flex justify-center items-center">
             1
          </div>
-         <div class="flex flex-col justify-center gap-5 px-4 order-first md:order-last">
-            <h1 class="font-bold text-3xl md:text-[43px] leading-[1.2]">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
-            <p class="text-lg text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
-            <div class="flex justify-start pt-4 gap-6">
-               <button class="neuro-effect px-5 py-4 rounded-md text-slate-300 font-medium active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
-               <button class="neuro-effect px-12 py-4 rounded-md text-slate-300 font-medium active:active-btn">Hire me</button>
+         <div class="flex flex-col justify-center gap-3 md:gap-5 px-4 order-first md:order-last">
+            <h1 class="font-bold text-[22px] md:text-3xl md:text-[43px] leading-[1.2]">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
+            <p class="text-sm md:text-lg text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
+            <div class="flex justify-start pt-2 md:pt-4 gap-4 md:gap-6">
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal text-sm active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal text-sm active:active-btn">Hire me</button>
             </div>
          </div>
       </div>
