--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>My Portfolio</title>
+   <!-- Montserrat Fonts -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
    <!-- Main CSS -->
    <link rel="stylesheet" href="public/css/main.css">
 
@@ -18,11 +23,11 @@
             1
          </div>
          <div class="flex flex-col justify-center gap-3 md:gap-5 px-4 order-first md:order-last">
-            <h1 class="font-bold text-[22px] md:text-3xl md:text-[43px] leading-[1.2]">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
-            <p class="text-sm md:text-lg text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
+            <h1 class="font-bold text-[22px] md:text-3xl md:text-[43px]">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
+            <p class="text-sm md:text-base text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
             <div class="flex justify-start pt-2 md:pt-4 gap-4 md:gap-6">
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal text-sm active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal text-sm active:active-btn">Hire me</button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal md:font-medium text-base active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-4 rounded-md text-slate-300 font-normal md:font-medium text-base active:active-btn">Hire me</button>
             </div>
          </div>
       </div>
