--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <header class="section translate-y-0 scale-100 active px-[5%] md:px-[8%]" id="home">
       <div class="h-screen grid md:grid-cols-2 gap-4">
          <div class="flex justify-center items-center">
-            1
+            ini buat gambar
          </div>
          <div class="flex flex-col justify-center gap-3 md:gap-5 px-4 order-first md:order-last">
             <h1 class="font-bold text-[22px] md:text-5xl">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
