--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
          <div class="flex justify-center items-center">
             ini buat gambar
          </div>
-         <div class="flex flex-col justify-center gap-3 md:gap-5 px-4 order-first md:order-last">
-            <h1 class="font-bold text-[22px] md:text-5xl">I'm <span class="text-neon-pink">Irwan Ardiansyah</span> and I'm a <span class="text-neon-blue">Front End Developer</span></h1>
-            <p class="text-sm md:text-base text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
+         <div class="flex flex-col justify-center gap-4 md:gap-6 px-4 order-first md:order-last">
+            <h1 class="font-bold text-[25px] md:text-5xl">I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Front End Developer</span></h1>
+            <p class="text-xs md:text-base text-gray-500 text-justify">Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.</p>
             <div class="flex justify-start pt-2 gap-4 md:gap-6">
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-base active:active-btn">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
-               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-base active:active-btn">Hire me <i class="fa-solid fa-paper-plane ml-2"></i></button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">Download CV <i class="fa-solid fa-arrow-down ml-2"></i></button>
+               <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">Hire me <i class="fa-solid fa-paper-plane ml-2"></i></button>
             </div>
          </div>
       </div>
@@ -45,7 +45,7 @@
    </main>
 
 <!-- Navigation Controls -->
-   <div class="fixed right-3 top-[50%] flex flex-col gap-4" id="control">
+   <div class="fixed inset-x-0 bottom-5 md:inset-y-0 md:right-5 flex justify-center md:items-end flex-row md:flex-col gap-4" id="control">
       <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
