add about section content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="font-bold text-[25px] md:text-5xl">
                I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Front End Developer</span>
             </h1>
-            <p class="text-xs md:text-base text-gray-500 text-justify">
+            <p class="text-sm md:text-base text-gray-500 text-justify">
                Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.
             </p>
             <div class="flex justify-start pt-2 gap-4 md:gap-6">
@@ -48,17 +48,46 @@
 
       <!-- About -->
       <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="about">
-         <div class="title py-4">
-            <h2 class="text-content text-4xl md:text-6xl">About <span class="text-neon-blue">me</span>
-               <span class="text-bg text-5xl md:text-8xl">ability</span>
+         <div class="title py-4 mb-8">
+            <h2 class="text-content text-4xl md:text-6xl">
+               About <span class="text-neon-blue">me</span><span class="text-bg text-5xl md:text-8xl">ability</span>
             </h2>
+         </div>
+
+         <div class="about-section grid md:grid-cols-2 md:py-12 gap-12">
+            <div class="left-side">
+               <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">My Information</h2>
+               <p class="text-sm md:text-base text-gray-400 text-justify md:leading-loose mb-4">
+                  Hello My name is Irwan Ardiansyah, and i'm 27 years old. I completed My Associated Degree of Information System at BSI University Of Jakarta.
+                  I have a good skills at programming, Especially at Web Programming.<br/>
+                  I was Learn About Vue JS, Tailwind CSS and some PHP Framework. and now i still upgrade my skilss, hope i can work and collab together. You can follow me at github and Instagram, Please follow me !
+               </p>
+
+               <div class="social-media grid grid-rows-3 gap-2 text-slate-50 font-semibold text-base">
+                  <a href="https://github.com/ardiansyahirwan" class="flex items-center gap-3 cursor-pointer">
+                     <i class="fa-brands fa-github"></i>
+                     <p>github.com/ardiansyahirwan</p>
+                  </a>
+                  <a href="https://instagram.com/ir_w_an" class="flex items-center gap-3 cursor-pointer">
+                     <i class="fa-brands fa-instagram"></i>
+                     <p>@ir_w_an</p>
+                  </a>
+                  <a href="#" class="flex items-center gap-3 cursor-pointer">
+                     <i class="fa-brands fa-google"></i>
+                     <p>ardiansyahirwan923@gmail.com</p>
+                  </a>
+               </div>
+            </div>
+            <div class="left-side">
+               <h2>Bagian Kanan</h2>
+            </div>
          </div>
       </section>
       <!-- End About -->
 
       <!-- Portfolio -->
       <section class="section h-screen translate-y-0 scale-100" id="portfolio">
-         <div class="title py-4">
+         <div class="title py-4 mb-8">
             <h2 class="text-content text-4xl md:text-6xl">My <span class="text-neon-blue">Portfolio</span>
                <span class="text-bg text-5xl md:text-8xl">Project</span>
             </h2>
@@ -68,7 +97,7 @@
 
       <!-- Contact -->
       <section class="section h-screen translate-y-0 scale-100" id="contact">
-         <div class="title py-4">
+         <div class="title py-4 mb-8">
             <h2 class="text-content text-4xl md:text-6xl">Contact <span class="text-neon-blue">Me</span>
                <span class="text-bg text-5xl md:text-8xl">Below</span>
             </h2>
