add right side of about

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
          </div>
 
          <div class="about-section grid md:grid-cols-2 md:py-12 gap-12">
+            <!-- Information -->
             <div class="left-side">
                <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">My Information</h2>
                <p class="text-sm md:text-base text-gray-400 text-justify md:leading-loose mb-4">
@@ -78,9 +79,26 @@
                   </a>
                </div>
             </div>
-            <div class="left-side">
-               <h2>Bagian Kanan</h2>
+            <!-- End Information -->
+
+            <!-- about achievment -->
+            <div class="right-side grid grid-rows-2 grid-flow-col gap-8">
+               <div class="grid grid-rows-2 gap-0 p-6 border-2 border-solid border-gray-700 rounded-md shadow-[1px_2px_15px_rgba(0,0,0,.1)] transition-all duration-[.4s] ease-in-out hover:-translate-y-1 hover:border-neon-blue hover:shadow-[1px_2px_15px_rgba(0,0,0,.5)]">
+                  <h2 class="text-7xl text-neon-blue/80 font-bold flex self-center">1</h2>
+                  <p class="text-lg font-bold uppercase flex self-center">Project Completed</p>
+               </div>
+
+               <div class="grid grid-rows-2 gap-0 p-6 border-2 border-solid border-gray-700 rounded-md shadow-[1px_2px_15px_rgba(0,0,0,.1)] transition-all duration-[.4s] ease-in-out hover:-translate-y-1 hover:border-neon-blue hover:shadow-[1px_2px_15px_rgba(0,0,0,.5)]">
+                  <h2 class="text-7xl text-neon-blue/80 font-bold flex self-center">2</h2>
+                  <p class="text-lg font-bold uppercase flex self-center">Project Ongoing</p>
+               </div>
+
+               <div class="grid grid-rows-2 gap-0 row-span-2 p-6 border-2 border-solid border-gray-700 rounded-md shadow-[1px_2px_15px_rgba(0,0,0,.1)] transition-all duration-[.4s] ease-in-out hover:-translate-y-1 hover:border-neon-blue hover:shadow-[1px_2px_15px_rgba(0,0,0,.5)]">
+                  <h2 class="text-7xl text-neon-blue/80 font-bold flex items-center justify-center">3+</h2>
+                  <p class="text-lg font-bold uppercase flex items-center justify-center">Dummy Project</p>
+               </div>
             </div>
+            <!-- End Achievment -->
          </div>
       </section>
       <!-- End About -->
