add about stats

--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
    <!-- Home -->
    <header class="section translate-y-0 scale-100 active px-[5%] md:px-[8%]" id="home">
       <div class="h-screen grid md:grid-cols-2 gap-0 md:gap-4">
+         <!-- Left Side -->
          <div class="flex justify-center md:items-center relative z-0">
             <div class="absolute z-20 bg-gradient-to-tr from-neon-blue to-neon-pink w-[70%] h-[100%] md:h-[60%] hexagon-clip">
             </div>
             <img class="grayscale-[5] h-[100%] md:h-[70%] w-max absolute z-30 bottom-0 left-3" src="./src/images/profile.png" alt="profile">
          </div>
+         <!-- End Left Side -->
+
+         <!-- Right Side -->
          <div class="flex flex-col justify-center gap-4 md:gap-6 px-4 order-first md:order-last">
             <h1 class="font-bold text-[25px] md:text-5xl">
-               I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Front End Developer</span>
+               I'm <span class="text-neon-blue/60">Irwan Ardiansyah</span> and I'm a <span class="text-neon-pink/70">Web Developer</span>
             </h1>
             <p class="text-sm md:text-base text-gray-500 text-justify">
                Honesty and responsibility are my strengths, I graduated from information systems at BSI University and I am ready to work with you guys, please take a closer look at me.
@@ -41,11 +45,12 @@
                </button>
             </div>
          </div>
+         <!-- End Right Side -->
       </div>
    </header>
    <!-- End Home -->
-   <main>
 
+   <main>
       <!-- About -->
       <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="about">
          <div class="title py-4 mb-8">
@@ -53,7 +58,7 @@
                About <span class="text-neon-blue">me</span><span class="text-bg text-5xl md:text-8xl">ability</span>
             </h2>
          </div>
-
+         <!-- My Information -->
          <div class="about-section grid md:grid-cols-2 md:py-12 gap-12">
             <!-- Information -->
             <div class="left-side">
@@ -100,6 +105,61 @@
             </div>
             <!-- End Achievment -->
          </div>
+         <!-- End My Information -->
+
+         <!-- Stats -->
+         <div class="grid md:grid-flow-row py-12">
+            <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">My Skills</h2>
+            <div class="about-skills grid grid-flow-row md:grid-cols-2 gap-x-12 gap-y-8 py-4">
+               <!-- Stat Vue JS -->
+               <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
+                  <p class="font-medium text-sm font-normal capitalize">Vue JS</p>
+                  <div class="w-full bg-slate-50 rounded-sm">
+                     <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 70%"> 70%</div>
+                  </div>
+               </div>
+               <!-- End Stat Vue -->
+
+               <!-- Stat tailwind -->
+               <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
+                  <p class="font-medium text-sm font-normal capitalize">Tailwind CSS</p>
+                  <div class="w-full bg-slate-50 rounded-sm">
+                     <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 65%"> 65%</div>
+                  </div>
+               </div>
+               <!-- End tailwind stats-->
+
+               <!-- Stat CSS -->
+               <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
+                  <p class="font-medium text-sm font-normal capitalize">CSS3</p>
+                  <div class="w-full bg-slate-50 rounded-sm">
+                     <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 80%"> 80%</div>
+                  </div>
+               </div>
+               <!-- End CSS-->
+
+               <!-- Stat JS -->
+               <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
+                  <p class="font-medium text-sm font-normal capitalize">Javascript</p>
+                  <div class="w-full bg-slate-50 rounded-sm">
+                     <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 60%"> 60%</div>
+                  </div>
+               </div>
+               <!-- End JS-->
+
+                <!-- Stat User Interface -->
+                <div class="skill grid grid-flow-row gap-3 p-6 bg-slate-800 rounded-md">
+                  <p class="font-medium text-sm font-normal capitalize">user interface</p>
+                  <div class="w-full bg-slate-50 rounded-sm">
+                     <div class="bg-gradient-to-r from-neon-blue to-neon-pink text-xs font-medium text-slate-50/90 text-center p-0.5 leading-none rounded-l-sm" style="width: 70%"> 70%</div>
+                  </div>
+               </div>
+               <!-- End User Interface-->
+            </div>
+         </div>
+         <!-- End My Stats -->
+
+
       </section>
       <!-- End About -->
 
