finishing my stats

--- a/index.html
+++ b/index.html
@@ -159,6 +159,40 @@
          </div>
          <!-- End My Stats -->
 
+         <!-- Time Line section-->
+         <div class="grid grid-flow-row pb-12">
+            <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">My Timeline</h2>
+             <!-- My Time Line -->
+            <div class="grid md:grid-cols-2 gap-12 py-4">
+               <!-- left timeline -->
+               <ol class="border-l-2 border-neon-blue">
+                  <li>
+                    <div class="flex flex-start items-center">
+                      <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                      <h4 class="font-semibold text-base -mt-2 capitalize">Work at Nittoh Presisi Indonesia</h4>
+                    </div>
+                    <div class="ml-6 mb-6 pb-6">
+                      <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">April 2014 - April 2018</a>
+                      <p class="text-sm text-gray-500 mt-2 mb-4">I work as production operator for assembly division</p>
+                    </div>
+                  </li>
+
+                  <li>
+                     <div class="flex flex-start items-center">
+                       <div class="bg-neon-blue w-4 h-4 flex items-center justify-center rounded-full -ml-2 mr-3 -mt-2"></div>
+                       <h4 class="font-semibold text-base -mt-2 capitalize">College start and learning programming</h4>
+                     </div>
+                     <div class="ml-6 mb-6 pb-6">
+                       <a href="#!" class="text-sm hover:text-blue-700 focus:text-blue-800 duration-300 transition ease-in-out text-sm">September 2018</a>
+                       <p class="text-sm text-gray-500 mt-2 mb-4">I start college at BSI University of Jakarta</p>
+                     </div>
+                   </li>
+               </ol>
+               <!-- end left timeline -->
+            </div>
+          <!-- end mytimeline -->
+         </div>
+         <!-- End TimeLine section-->
 
       </section>
       <!-- End About -->
